some small changes in the report made by Peicen

--- a/project_report/main.tex
+++ b/project_report/main.tex
@@ -73,7 +73,7 @@ The third part is different from the previous two parts. The function for the th
 
 The WarmColdDay function demonstrates the days of warmest and coldest days occurred at and the output shown by histogram allows us to visualise when the warmest and coldest days are most likely to occur during the year. A Gaussian function is plotted to the histogram to fit the distribution.\\
 
-Figure \ref{fig:WarmCold} shows the output of this function, where the blue and red histogram indicates the coldest and warmest days respectively, while the blue and red gaussian line indicates the distribution of warmest and coldest days respectively. 
+The input of this function is the name of the location, which are lund, visby, umeå, luleå and uppsala. Figure \ref{fig:WarmCold} shows one of the outputs, where the blue and red histogram indicates the coldest and warmest days respectively, while the blue and red gaussian line indicates the distribution of warmest and coldest days respectively. The outputs for the other four locations are also plotted and the value of mean value and standard deviation are shown in Table \ref{tab:WarmCold_Table}, we can see that the error values are really large and this is due to lack of data in the dataset provided for the four locations. 
 
 
 
